--- a/.github/workflows/vpn-checker.yml
+++ b/.github/workflows/vpn-checker.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install requests aiohttp asyncio base64
+          pip install aiohttp
 
       - name: Run VPN checker
         env:
