--- a/.github/workflows/vpn-checker.yml
+++ b/.github/workflows/vpn-checker.yml
@@ -6,6 +6,9 @@ on:
     - cron: '0 */6 * * *'
   workflow_dispatch: # Ручной запуск
 
+permissions:
+  contents: write
+
 jobs:
   check-keys:
     runs-on: ubuntu-latest
@@ -13,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Python
         uses: actions/setup-python@v5
